:memo: add example website

--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Meine eigene Webseite</title>
-    <link rel="icon" type="image/png" href="https://www.united-internet.de/favicon.ico">
+    <title>Programmieren einer eigenen Webseite</title>
+    <link rel="icon" type="image/png" href="https://static.vecteezy.com/system/resources/previews/023/736/519/non_2x/programmer-icon-image-suitable-for-mobile-apps-web-apps-and-print-media-vector.jpg">
     <style>
         body {
+            background-image: url("https://img.freepik.com/fotos-premium/der-gruene-code-machte-das-programmieren-zu-einem-dunklen-hintergrund_250994-1553.jpg");
             background-repeat: repeat;
             background-size: cover;
-            background-color: #ffffff;
+            background-color: #A2D2FF;
         }
     </style>
 </head>
 <body>
+<p style="font-size: 44px; color: #cc1d0a; position: absolute; top: 0px; left: 20px; font-family: Arial,serif; font-weight: 600;">Station: Programmieren einer eigenen Webseite</p>
+<p style="font-size: 34px; color: #a712c4; position: absolute; top: 100px; left: 20px; font-family: Arial,serif; font-weight: 600;">Was kannst du hier machen?</p>
+<img src="https://img.freepik.com/fotos-kostenlos/grunge-schwarzer-beton-strukturierter-hintergrund_53876-124541.jpg" style="position: absolute; top: 200px; left: 0px; width: 80%; height: 60%;" alt=>
+<p style="font-size: 24px; color: #fff; position: absolute; top: 200px; left: 20px; font-family: Arial,serif; font-weight: 800;">Du kannst hier deine eigene Webseite erstellen. Dazu kannst du Texte, Bilder und Videos einfügen.<br>Du kannst auch die Farben und die Größe der Schrift ändern.<br><br>Um Text einzufügen musst das folgendermaßen machen:<br>text("Hier steht dein Text")<br><br>Um ein Bild einzufügen musst du folgendes machen:<br>bild("Link des Bildes")<br><br>Um ein Video einzufügen musst du folgendes machen:<br>video("Link des Videos")<br><br>Um den Titel zu ändern musst du folgendes machen:<br>titel("Hier steht dein Titel")<br><br></p>
+<p style="font-size: 24px; color: #ffff00; position: absolute; top: 600px; left: 20px; font-family: Arial,serif; font-weight: 400;">Mehr Funktionen findest du hier: <a href="https://github.com/fweigel-dev/Girls-and-Boys-Day-2024">https://github.com/fweigel-dev/Girls-and-Boys-Day-2024</a></p>
 </body>
 </html>
